# Dynamic-Compensated-WAM-Haptic-Teleop

./: .gitignore  LICENSE  README.md  compare_data_teleop_gravity.py
follower/: CMakeLists.txt  (+17 more)
leader/: 2DOF_wam_joint_space_ctc_extorq.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  calculate_error.py  cmake_install.cmake  ex11_master_master_ID_feed.cpp  ex11_master_master_ID_feed_extorq.cpp  ex11_master_master_ctc_feed.cpp  ex11_master_master_ctc_feed_extorq.cpp  ex11_master_master_feed.cpp  ex11_master_master_feed_extorq.cpp  ex11_master_master_feed_full.cpp  ex11_master_master_feed_full_extorq.cpp  ex11_master_master_gravity.cpp  ex11_master_master_gravity_extorq.cpp  ex11_master_master_nogravity.cpp  leader_seprate_extorq  leader_seprate_extorq_gravity_test1  leader_seprate_extorq_gravity_test2  leader_seprate_extorq_id  leader_seprate_extorq_id+pid  leader_seprate_extorq_id+pid2  leader_seprate_extorq_id+pid3  leader_seprate_extorq_id+pid4  leader_seprate_extorq_id+pid5  plot_data.py  plot_data_teleop_feed.py  plot_data_teleop_feed_extorq.py  plot_data_teleop_feed_tauh.py  plot_data_teleop_gravity.py  plot_data_teleop_gravity_extorq.py  plot_data_teleop_grv.py  plot_data_teleop_grv_tauh.py
leader/.data_ral/leader_ctc_hc_3lb_rep1/: config.txt
leader/.data_ral/leader_extorq_ctc_set1_rep1/: config.txt  dynamics.txt  kinematics.txt
leader/.data_ral/leader_extorq_ctc_set1_rep2/: dynamics.txt  kinematics.txt
leader/include/: Dynamics.hpp  Dynamics_full.hpp  PI_4D.hpp  PI_4D_nogravity.hpp  Y_4D.hpp  Y_4D_nogravity.hpp  ex11_master_master.h  sin_jp_trajectory.hpp
(+407 files in other folders)
